--- a/Secretariat_Soft/Properties/Resources.resx
+++ b/Secretariat_Soft/Properties/Resources.resx
@@ -205,6 +205,9 @@
   <data name="kToolStripButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\kToolStripButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="login" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\login.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="min_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\min_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
